--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <script src="https://kit.fontawesome.com/4d70e5d492.js" crossorigin="anonymous"></script>
     <title>Weather Map App</title>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
